Unreviewed, non-unified build fix after r289474 https://bugs.webkit.org/show_bug.cgi?id=236425

* Modules/indexeddb/server/UniqueIDBDatabaseTransaction.cpp:



Canonical link: https://commits.webkit.org/247048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289517 268f45cc-cd09-0410-ab3c-d52691b4dbfc